fixed db include error and resize issue with collapse sidebar button

--- a/frontend/epcr-system/src/Sidebar.css
+++ b/frontend/epcr-system/src/Sidebar.css
@@ -4,12 +4,18 @@
         bottom: 0;
         left: 0;
         min-height: 100vh !important;
-        min-width: 10vw;
-        padding: 0px 0 0;
+        max-width: 150px;
+        padding: 0 0 0;
         box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
         font-size: 24px;
 }
 
 .active{
     background-color: #C4C4C4;
+}
+
+@media (max-width: 768px){
+    .hamburger-shift{
+        padding: 0 0 0 0 !important;
+    }
 }
